# workingclaw-sandbox

./: .gitignore  index.html  package-lock.json  package.json
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_client.rs  config.rs  docker.rs  lib.rs  main.rs  ollama.rs  task_runner.rs
src/lib/: tauri.ts
src/pages/: Dashboard.tsx  Settings.tsx
